--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site config
-name: oscarb.se - Technology and Learning
-description: Simplifying everyday life through teaching, designing and programming.
+name: oscarb.se
+description: To teach, design and program!
 # url: oscarb.se
 # author
 # logo
