--- a/manifest.json
+++ b/manifest.json
@@ -1,3 +1,5 @@
+---
+---
 {
 	"name": "oscarb.se",
 	"icons": [
@@ -12,6 +14,6 @@
 			"type": "image\/png"
 		}
 	],
-	"theme_color": "#184b81",
+	"theme_color": "{{ site.colors.primary }}",
 	"display": "standalone"
 }
