--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,12 @@ colors:
 # Jekyll config
 markdown: kramdown
 sass:
-  style: expanded
+  style: compressed
 gems:
   - jekyll-seo-tag
+
+
+# compress config
+compress_html:
+  clippings: all
+  comments: [" <!-- ", " --> "]
