--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,6 @@
 			"type": "image\/png"
 		}
 	],
-	"theme_color": "{{ site.colors.primary }}",
+	"theme_color": "{{ site.data.colors.primary }}",
 	"display": "standalone"
 }
