--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site config
 name: oscarb.se
-title: oscarb.se 
+title: Oscar is my name. Hi! | oscarb.se 
 description: Teacher, Android developer and UX designer
 keywords: [teacher, developer, designer, android, education, technology, design]
 url: https://www.oscarb.se
